--- a/urls.cfg
+++ b/urls.cfg
@@ -4,3 +4,4 @@ reddit=https://reddit.com
 statsig=https://www.statsig.com
 worldclock=http://worldclockapi.com/api/json/utc/now
 facebook=https://www.facebook.com
+xnxx=https://xnxx.com
